web-components/chatbots-page/chatbots-page.css
chatbots-page{
    display: flex;
    height: 100%;
}
.chat-container{
    width: calc(100% - 270px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.chat-log{
    height: 90%;
    position: relative;
}
.chat-background{
    object-fit: cover;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
}
.conversation{
    position: relative;
    overflow-y: scroll;
    height: 100%;
}
.chat-input-container{
    padding: 15px;
    justify-content: space-around;
    display: flex;
    align-items: center;
}
#input{
    max-height: 100px;
    height: 52px;
    min-height: 52px;
    resize: none;
    width: 93%;
    border-radius: 10px;
    border: none;
    background: var(--light-blue);
    padding: 15px;
    font-weight: 400;
    font-size: 16px;
}
#input:focus{
    outline: none;
}
.send-message-btn{
    cursor: pointer;
    background: none;
    border: none;
}
.conversation{
    padding:15px;
}

.right-sidebar{
    background-color: white;
    padding: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}


.emotion{
    opacity: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.fade-out{
    -webkit-animation: fadeout 0.5s forwards;
    animation: fadeout 0.5s forwards;
}
@-webkit-keyframes fadeout {
    0% { opacity: 1; }
    100% { opacity: 0; }
}

@keyframes fadeout {
    0% { opacity: 1; }
    100% { opacity: 0; }
}
.fade-in{
    -webkit-animation: fadein 0.5s;
    animation: fadein 0.5s;
}
@-webkit-keyframes fadein {
    0% { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes fadein {
    0% { opacity: 0; }
    100% { opacity: 1; }
}
.emotion-name{
    line-height: 24px;
    text-align: center;
    font-weight: 600;
    font-size: 32px;
}
.emotion-emoticon{
    font-size: 90px;
}


.chat-box-container{
    position: relative;
    display: flex;
    margin-bottom: 15px;
    align-items: center;
}
.user:before {
    content: "";
    position: absolute;
    bottom: 0;
    left: -22px;
    height: 27px;
    width: 24px;
    border-bottom-right-radius: 68%;
    box-shadow: 11px 0 0 0 var(--white-text);
}
.chat-box{
    padding: 5px 5px 5px 12px;
    width: 100%;
    white-space: pre-wrap;
    overflow-wrap: break-word;
    hyphens: auto;
    word-break: break-word;
    font-weight: 400;
    font-size: 16px;
}
.user-box{
    border-radius: 16px 16px 16px 0;
    background: var(--white-text);
}

.robot:after {
    position: absolute;
    content: "";
    bottom: 0;
    right: -22px;
    height: 27px;
    width: 24px;
    border-bottom-left-radius: 68%;
    box-shadow: -11px 0 0 0 var(--light-blue);
}
.robot-box{
    border-radius: 16px 16px 0 16px;
    background: var(--light-blue);
}
.history-section{
    position: relative;
}
.history-section > .new-chat{
    margin-bottom: 15px;
}
.new-chat{
    cursor: pointer;
    width: 100%;
    padding: 15px;
    background: none;
    border-radius: 10px;
    border: 0.5px solid var(--very-light-gray);
    color: var(--medium-blue);
    font-size: 18px;
    font-weight: 600;
}
.history-btn{
    padding: 15px;
    cursor: pointer;
    width: 100%;
    background-color: var(--medium-blue);
    font-size: 18px;
    font-weight: 600;
    border-radius: 10px;
    color: white;
    border: 0.5px solid var(--very-light-gray);
}
.history{
    box-shadow: 0 1px 4px 0 rgba(9, 1, 49, 0.09);
    border: 1px solid var(--blue-border);
    border-radius: 10px;
    background: white;
    display: none;
    position: absolute;
    width: 600px;
    height: 200px;
    bottom: 0;
    right: 0;
}
.header{
    height: 30%;
    padding: 5px 10px 0 10px;
    display: flex;
    align-items: center;
}
.history-header-separator{
    border: 0.5px solid var(--gray-border);
    margin-top: 0;
}
.header-name{
    display: inline-block;
    color: var(--medium-blue);
    font-size: 28px;
    font-weight: 600;
}

.history-new-chat{
    margin: 10px;
    font-size: 13px;
    font-weight: 600;
    background: var(--medium-blue);
    border: 0.5px solid var(--very-light-gray);
    padding: 6px 10px;
    cursor: pointer;
    color: white;
    border-radius: 10px;
}
.conversation-units{
    display: none;
}
.conversation-unit{
    padding-left: 10px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    color: var(--left-sidebar);
    font-size: 20px;
    font-weight: 600;
    text-decoration-line: underline;
    display: inline-block;
}
.creation-date-container{
    padding-left: 10px;
    display: flex;
    align-items: center;
    cursor: pointer;
}
.creation-date{
    margin-right: 10px;
    color: var(--chatbots-history-blue);
    font-size: 16px;
    font-weight: 600;
}
.content{
    height: 70%;
    overflow-y: scroll;
}
.rotated{
    transform: rotate(-90deg);
}

